tests/modules/tnotuniquename2.nim
discard """
  errormsg: "redefinition of 'mnotuniquename'"
"""

# avoid name clashes
import mnotuniquename
import tnotuniquename/mnotuniquename
